# interval

./: .envrc  default.nix  interval.cabal
nix/: sources.json
src/: Interval.hs
src/Interval/: Tests.hs
test/: Test.hs
