cabal-version:      2.4
name:               interval
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Haskell library for finite and infinite intervals of any ordered type

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: Apache-2.0

author: Johannes Gerer
copyright: 2022-2023 Johannes Gerer

library

    exposed-modules:
        Interval
        Interval.Tests

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
                        base
                      , aeson
                      , chronos
                      , containers
                      , hspec
                      , interpolatedstring-perl6
                      , lens
                      , yahp
                      , yaml
                      -- , QuickCheck
                    
    ghc-options:
     -Werror=partial-fields
     -Werror=incomplete-record-updates
     -Werror=incomplete-uni-patterns
     -Werror=incomplete-patterns
     -Werror=unused-top-binds -Werror=unused-local-binds -Werror=unused-pattern-binds
     -Werror=unused-matches
     -Werror=overflowed-literals
     -Werror=overlapping-patterns
     -Werror=missing-fields
     -Werror=typed-holes
     -Werror=empty-enumerations
     -Werror=unrecognised-pragmas
     -Werror=missing-methods
     -Wall
     -Wno-orphans
     -Wno-missing-signatures
     -Wno-unused-do-bind
     -Wno-name-shadowing
     -Wno-unticked-promoted-constructors
     -Wcompat
      -j +RTS -A128m -n2m -RTS

    default-extensions:
      CPP
      DataKinds
      DefaultSignatures
      DerivingVia
      FunctionalDependencies
      GADTs
      LambdaCase
      NoImplicitPrelude
      NoMonomorphismRestriction
      OverloadedLabels
      OverloadedStrings
      QuasiQuotes
      RecordWildCards
      TypeFamilies
                    
    hs-source-dirs:   src
    default-language: GHC2021

test-suite intervals-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  ghc-options: -Wall -rtsopts -threaded
    -j +RTS -A128m -n2m -RTS
  hs-source-dirs:
    test
  build-depends:
                      base
                    , interval
  default-language: Haskell2010
           
-- Local Variables:
-- compile-command: "nix-shell --run 'cabal exec -- ghc-pkg list'"
-- End: